# med-rag-assistant

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
argocd/: medrag-app.yaml
charts/medrag/: Chart.yaml  values.yaml
charts/medrag/templates/: deployment.yaml  service.yaml
data/: diabetes_report.txt  fracture_report.txt  sample_report.txt
data/eval/: medical_qa.jsonl
frontend/: vite.config.ts
frontend/src/: App.css  App.tsx
gateway/: Cargo.toml
gateway/src/: main.rs
reports/: BENCHMARK.md
reports/sbom/: image.cdx.json  repo.cdx.json
src/medrag/: __init__.py  agent.py  api.py  chunking.py  cli.py  embeddings.py  eval.py  graph.py  llm.py  loader.py  mcp_server.py  orchestrator.py  orchestrator_langgraph.py  pii.py  pipeline.py  planner.py  retrieval.py  routing.py  store.py  synth.py  tools.py  tracing.py  vision.py
tests/: test_agent.py  test_api.py  test_chunking.py  test_cli.py  test_eval.py  test_graph.py  test_mcp_server.py  test_orchestrator.py  test_orchestrator_langgraph.py  test_pii.py  test_pipeline.py  test_planner.py  test_qdrant_store.py  test_retrieval.py  test_routing.py  test_store.py  test_synth.py  test_tracing.py  test_vision.py  test_vllm_llm.py
