[package]
name = "gateway"
version = "0.1.0"
edition = "2024"
description = "med-rag-assistant 边缘网关:托管前端静态文件,反向代理 /api 到 Python RAG 服务"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
# rustls 避免对系统 openssl 的依赖
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs", "cors", "timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
